# BriefKAsten

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  LICENSE  README.md  topo_test.cpp
.github/workflows/: cmake-build.yml
cmake/: chunk_view_compile_check.cpp  dependencies.cmake  lazy_split_compile_check.cpp
src/briefkasten/: CMakeLists.txt  aggregators.hpp  buffered_queue.hpp  envelope_aggregators.hpp  grid_indirection.hpp  indirection.hpp  noop_indirection.hpp  queue_builder.hpp  simple_aggregators.hpp  topology_aware_indirection.hpp
src/briefkasten/detail/: concepts.hpp  definitions.hpp  fixed_size_buffer.hpp  queue.hpp  receiver.hpp  request_pool.hpp  sender.hpp  termination_counter.hpp  view_adaptors.hpp
src/message-queue/: CMakeLists.txt  aggregators.hpp  buffered_queue.hpp  grid_indirection.hpp  indirection.hpp  noop_indirection.hpp  queue.hpp  queue_builder.hpp
src/message-queue/detail/: concepts.hpp  definitions.hpp  queue.hpp  receiver.hpp  request_pool.hpp  sender.hpp  view_adaptors.hpp
tests/: CMakeLists.txt  alltoall_test.cpp  view_adaptor_test.cpp  workloop_test.cpp
